objects/tffa__AdditionalPreference__c.object
<CustomObject>
    <description>Additional preference usually captured for a party e.g. Online Banking, E-Statements. These are not specific to an application. For ones that are, use Account Preferences.</description>
    <fields>
        <fullName>tffa__AddOnServiceType__c</fullName>
        <description>Captures the type of applied add-on service.</description>
        <label>Add-on service type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddOnServiceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique identifier for the preference or service opted for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information captured about the service opted for.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether the preference or service was opted for.</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingAuthority__c</fullName>
        <description>Captures the online banking authority type for the related party</description>
        <label>Online banking authority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OnlineBankingAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingMFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether the user opted for MFA feature</description>
        <label>Online Banking MFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingProvider__c</fullName>
        <description>Name of the Online banking provider system. e.g. NCRD3, NCRDI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online banking provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the party whose preference is being captured.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Additional Preferences</relationshipLabel>
        <relationshipName>AdditionalPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RelatedParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related party whose preference is being captured</description>
        <label>Related Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Related Additional Preferences</relationshipLabel>
        <relationshipName>RelatedAdditionalPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Relative order w.r.t others in the list.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>Current state (of processing) of the additional preference.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Current status (of processing) of the additional preference</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AdditionalPreferenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <description>Reference to parent submission.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Additional Preferences</relationshipLabel>
        <relationshipName>AdditionalPreferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <defaultValue>&quot;ADD_ON_SERVICE&quot;</defaultValue>
        <description>Nature of the preference.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AdditionalPreferenceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Captures any additional detail related to the preference. If more details are required custom fields may be added.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Additional Preference</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>